# CyberHam

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  LOGGING.md  README.md  SETUP.md  bot.py  client_secret_712155494453-5slbl4e29ibr63ug7mcrvvr0vbcdb88c.apps.googleusercontent.com.json  cyberclub_email.py  requirements.txt  run.unix.bash  run.windows.bash  setup.cfg  todo.md  token.json
cyberham/: __init__.py  __main__.py  backend.py  comp_backend.py  config.py  cyberclub_email.py  dashboard_api.py  discord_bot.py  events.py  google_apis.py  types.py
cyberham/apis/: auth.py  crud_factory.py  crypto.py  dashboard.py  google_apis.py  mock_google_apis.py  types.py
cyberham/backend/: events.py  register.py  users.py
cyberham/bot/: admin.py  announcements.py  bot.py  constants.py  events.py  leaderboard.py  rsvp.py  ui.py  users.py  utils.py
cyberham/database/: backup.py  migrate_email_opt_out.py  migrate_resumes.py  mockdb.py  queries.py  readonly.py  sqlite.py  typeddb.py  types.py
cyberham/dynamodb/: dynamo.py  events.py  eventsdb.py  helper.py  mockdb.py  register.py  typeddb.py  types.py  users.py  usersdb.py
cyberham/secrets/: token.json
cyberham/tests/: __init__.py  dynamo_models.py  models.py  test_dynamo_db.py  test_transform.py  test_typed_db.py  transform_models.py
cyberham/tests/apis/: TestGoogleApis.py  test_dashboard.py  test_google.py
cyberham/tests/backend/: backend_patcher.py  mockdb.py  models.py  test_award.py  (+9 more)
cyberham/utils/: date.py  events.py  logger.py  major_parser.py  transform.py
scripts/: event_attendees.sh  ext.py  member_events.sh
(+9 files in other folders)
