[metadata]
name = CyberHam
version = 0.0.1
author = Eric Yang, Emmie, Liam
author_email = eric@awesome.com
description = Discord server management bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/erichyang/CyberHam
project_urls =
    Bug Tracker = https://github.com/erichyang/CyberHam/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cyberham
packages = find:
python_requires = >=3.8

[options.packages.find]
where = cyberham
